vezbanje 17-tog-casa

--- a/Html css/4. Cas/domaci.html
+++ b/Html css/4. Cas/domaci.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>4. Cas domaci</title>
 </head>
 
@@ -14,6 +15,7 @@
             <th colspan="6"><h4>RASPORED CASOVA</h4></th>
             
          </tr>
+         <h1>
 <tr>
      <td> <b>BROJ<br>CASA<br></b></td>
      <td>  <b>PONEDELJAK</b></td>
@@ -82,34 +84,11 @@
     <td>Engleski jezik</td>
     <td>Fizicko</td>
  </tr>
+</h1>
  <tr>
     
     <td colspan="6"><i>by:Dijana Popovic</i></td>
  </tr>
  
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
       </table>
