--- a/Html css/4. Cas/index1.html
+++ b/Html css/4. Cas/index1.html
@@ -15,7 +15,7 @@
 <!-- alt,width i height aributi  su opcioni. Fotografija moze biti smestena i bez njih.-->
 
 <img src="./image.jpeg" alt="Fotografija Prirode" width="600" height ="500">
-<img src="" alt="fotografija prirode" width="400" height ="400"><!-- img je online elemenat -->
+<img src="image2..jpg" alt="fotografija prirode" width="600" height ="500"><!-- img je online elemenat -->
 
 
 
