--- a/Html css/Vezbanje Cas/index 17-cas.html
+++ b/Html css/Vezbanje Cas/index 17-cas.html
@@ -50,7 +50,7 @@
     
     <div class="div3">
         <div class="slika">
-            <img src="logo.jpg" alt="" class="slika">
+            <img src="ps.jpg" alt="" class="slika">
         </div>
 
         <div class="paragraf">
